20251009 - auth + modify phieudiemdanh

--- a/BackEnd/src/main/resources/application.properties
+++ b/BackEnd/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.jpa.properties.hibernate.format_sql=true
 cors.allowed.origins=http://localhost:3000,http://127.0.0.1:3000
 
 # JWT Configuration
-jwt.secret=mySecretKey
+jwt.secret=mySecretKeyForRFIDAttendanceSystem2024VerySecureKey
 jwt.expiration=86400000
 
 # Logging
