--- a/BackEnd/src/main/resources/application.properties
+++ b/BackEnd/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8080
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/rfid_attendance_system?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/rfid_attendance_system?useSSL=false&serverTimezone=Asia/Ho_Chi_Minh&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -11,6 +11,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Ho_Chi_Minh
 
 # CORS Configuration
 cors.allowed.origins=http://localhost:3000,http://127.0.0.1:3000
@@ -22,3 +23,7 @@ jwt.expiration=86400000
 # Logging
 logging.level.com.rfid=DEBUG
 logging.level.org.springframework.web=DEBUG
+
+# Timezone Configuration
+spring.jackson.time-zone=Asia/Ho_Chi_Minh
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
