--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "chart.js": "^4.5.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-router-bootstrap": "^0.26.3",
