--- a/BackEnd/src/main/resources/application.properties
+++ b/BackEnd/src/main/resources/application.properties
@@ -14,7 +14,8 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Ho_Chi_Minh
 
 # CORS Configuration
-cors.allowed.origins=http://localhost:3000,http://127.0.0.1:3000
+cors.allowed.origins=http://localhost:3000,http://127.0.0.1:3000,http://hethongdiemdanh.actvn.vn:8088
+
 
 # JWT Configuration
 jwt.secret=mySecretKeyForRFIDAttendanceSystem2024VerySecureKey
